2004-03-17 Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2004-03-10 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added Irish to ALL_LINGUAS.

2004-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added Norwegian to ALL_LINGUAS.

##############################################################################
#                                   1.1.6                                    #
##############################################################################
2004-02-06  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-01-19  Marcus Bjurman  <marbj499@student.liu.se>

	* README.in:
	Updated small details all over.

	* plugins/cvs/Makefile.am: 
	* plugins/cvs/callbacks.c:
	* plugins/cvs/callbacks.h:
	* plugins/cvs/close.xpm:
	* plugins/cvs/cvs-plugin.c:
	* plugins/cvs/cvs-plugin.h:
	* plugins/cvs/cvs-plugin.xpm:
	* plugins/cvs/interface.c:
	* plugins/cvs/interface.h:
	* plugins/cvs/parser.h:
	* plugins/cvs/parser.l:
	Updated the cvs-plugin so that it can be used to diff and log files.

	* src/history.c (history_add):
	Fixed crash when navigating back in the history and then entering
	another dir.

	* libgcmd/libgcmd-widget-factory.c: 
	* libgcmd/libgcmd-widget-factory.h:
	Added function to create GtkOptionMenu's and fill them with options.

	* src/gnome-cmd-options-dialog.c:
	Changed to using GtkOptionMenu's instead of the combo boxes where
	appropriate.

	* src/gnome-cmd-dir-indicator.c:
	Removed unused stuff.

	* src/gnome-cmd-file-list.c (gnome_cmd_file_list_sort):
	Fixed bogus focus row when changing sorting column in the inactive
	file-list.

2004-01-17  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-dir.c: 
	* src/gnome-cmd-con.c: 
	* src/gnome-cmd-con.h:
	Fixed a problem when opening multiple temporary ftp connections to the
	same url.

	* src/plugin_manager.c: