@@ -1,3 +1,13 @@
+2004-04-08  Piotr Eljasiak  <epiotr@cvs.gnome.org>
+
+	* src/gnome-cmd-file-list.c:
+	* src/gnome-cmd-file-list.h:
+	* src/gnome-cmd-main-menu.c:
+	* src/gnome-cmd-main-win.c:
+	* src/useractions.c:
+	* src/useractions.h:
+	Added copying selected filenames to clipboard
+
 2004-03-17 Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.
